# test

./: CMakeLists.txt
include/: serial.h
src/: main.cpp
兑换站/: 各视频兑换站姿态坐标.xlsx
